ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail9.ligo
type myd is One of int | Two

function t (const x : myd) is
  case x of
  | One (a) -> 2
  | Two -> a
  end
